tests/ui/rfcs/rfc-2632-const-trait-impl/trait-where-clause-self-referential.stderr
error[E0015]: cannot call non-const fn `<T as Foo>::bar` in constant functions
  --> $DIR/trait-where-clause-self-referential.rs:22:5
   |
LL |     T::bar();
   |     ^^^^^^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

error: aborting due to previous error

For more information about this error, try `rustc --explain E0015`.
